2009-10-24  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	When computing menu structure, add form actions to all occurrences of the form.

2009-10-17  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix formactions typo in pytis_update_actions_structure db function.

2009-10-14  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Revert "Make inner join of a_pytis_computed_summary_rights in ev_pytis_user_menu".
	
	This reverts commit 13dfa6c6062f48a59deff5c519d6818f8a99599e.
	
	This change, intended to give some access protection when making menu changes,
	discards menu separators from the menu view.
	

2009-10-16  Milan Zamazal  <pdm@brailcom.org>

	* tools/pytis-transform.el:
	Fixes in pytis-transform.el.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/cms/cms.py:
	Convert cms.py to new `id' arguments.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Add `public' argument to ViewSpec.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Another argument conversion in menu.py.

2009-10-13  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	* doc/tutorials/DmpDb:
	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	* tools/genmenu.py:
	* tools/pytis-transform.el:
	Public/private specifications introduced.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Fix _spec_name naming conflict in spec.py.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fixes in genmenu.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	* tools/genmenu.py:
	Support ActionGroup's in genmenu.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/dmp:
	DMP admin documentation updated.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	Read form actions rights from the database.

2009-09-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py: