@@ -1,5 +1,10 @@
 2009-10-24  Milan Zamazal  <pdm@brailcom.org>
 
+	* tools/genmenu.py:
+	Add form actions to all actions found in genmenu.
+
+2009-10-24  Milan Zamazal  <pdm@brailcom.org>
+
 	* db/db_pytis_menu.py:
 	When computing menu structure, add form actions to all occurrences of the form.
 
